# databricks-dab-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  azure-pipelines-pr.yml  azure-pipelines.yml  databricks.yml  environment.yml  mkdocs.yml  pyproject.toml  requirements-old.txt  requirements.txt  setup-ci.py  setup.py
.github/workflows/: cicd.yml
app/: app.py
docs/: code_documentation.md
docs/img/: Untitled-2024-05-21-1054.excalidraw
resources/: job.yml
src/databricks_dab_demo/: utils.py
src/databricks_dab_demo/classical_ml/data/: test.csv  train.csv
src/databricks_dab_demo/classical_ml/data_pipeline/: task1.py  task2.py
src/databricks_dab_demo/classical_ml/model/: evaluate.py  train.py
src/databricks_dab_demo/data/: generated_iris_data.csv  original_iris_data.csv
src/databricks_dab_demo/data_pipeline/: task1.py  task2.py
src/databricks_dab_demo/model/: evaluate.py  train.py
